# PyPipe

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
pypipe/: __init__.py  async_core.py  core.py
tests/: test_async_core.py  test_core.py
